# migrid-ux

./: .editorconfig  .gitignore  .prettierignore  LICENSE  Makefile  README.md  eslint.config.mjs  local-requirements.txt  package.json  pyproject.toml
.github/workflows/: ci.yml
devserver/: common.py  devserver.py  templating.py
devserver/api/: peers.py
devserver/data/peers/: accepted.json  requested.json
devserver/templates/: index-apps.html.jinja
envhelp/: lpython  node  npm
envhelp/scripts/: dist_version.py  provision_npm.py  serve_http.py
lib/: app.js  binding.js  observable.js  state.js
migux/: __init__.py  __main__.py
migux/apps/peers/: __init__.py  peers.py
migux/apps/peers/templates/: search_result--accepted.html.jinja  search_result.html.jinja
migux/public/: build  migappBootstrap.js
migux/public/apps/migux/: peers.html  peers.js
migux/public/components/: Tabs.js
public/: index.html  index.js  migappBootstrap.js
public/apps/: migux
public/apps/example/: arrays.html  arrays.js  observe.html  observe.js
public/components/: Tabs.js
src/apps/: peers.scss
src/components/: MiguxTooltip.scss  Tabs.scss
src/scss/: _root.scss  main.scss  migux.scss  reset.scss  undo.scss
test/apps/migux/: peers.test.js
test/fixtures/: fragment_accepted.html  fragment_requested.html
test/lib/: binding.test.js  observable.test.js  state.test.js
test/public/: migappBootstrap.test.js
test/support/: assertions.js  browser.js
