[project]
name = "migux"
version = "0.0.0"
dependencies = []
#requires-python = ">=3.8"
authors = [{ name = "Another person", email = "another.person@example.com" }]
maintainers = [
  { name = "Another person", email = "another.person@example.com" },
]
description = "Lovely Spam! Wonderful Spam!"
readme = "README.md"
license = "GPL-2.0-only"
license-files = ["LICENSE"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# build tools

[tool.setuptools]
packages = ["migux", "migux.apps", "migux.apps.peers"]

[tool.setuptools.package-dir]
myproj = "migux"

[tool.setuptools.package-data]
migux = ["**/*.jinja", "**/*.html", "**/*.js", "**/*.css"]

# lint tools

[tool.black]
line-length = 80
extend-exclude = '''
    public/node_modules
'''

[tool.isort]
line_length = 80
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
disable = "C0103, C0209"
